Fixed multiple waypoints for multiple enemies
Alse fixed sounds effects

--- a/IsometricShooter2/Assembly-CSharp.csproj
+++ b/IsometricShooter2/Assembly-CSharp.csproj
@@ -66,10 +66,12 @@
     <Compile Include="Assets\Scripts\Camera\CameraObstaclesTransparency.cs" />
     <Compile Include="Assets\Scripts\Characters\Enemy\EnemyAI.cs" />
     <Compile Include="Assets\Scripts\Characters\Enemy\EnemyAttack.cs" />
+    <Compile Include="Assets\Scripts\Characters\Enemy\EnemyAudioClips.cs" />
     <Compile Include="Assets\Scripts\Characters\Enemy\EnemyBaseFSM.cs" />
     <Compile Include="Assets\Scripts\Characters\Enemy\EnemyChase.cs" />
     <Compile Include="Assets\Scripts\Characters\Enemy\EnemyPatrol.cs" />
     <Compile Include="Assets\Scripts\Characters\Enemy\EnemyStats.cs" />
+    <Compile Include="Assets\Scripts\Characters\Player\PlayerAudioClips.cs" />
     <Compile Include="Assets\Scripts\Characters\Player\PlayerMovement.cs" />
     <Compile Include="Assets\Scripts\Characters\Player\PlayerShoot.cs" />
     <Compile Include="Assets\Scripts\Characters\Player\PlayerStats.cs" />
