--- a/IsometricShooter2/Assembly-CSharp.csproj
+++ b/IsometricShooter2/Assembly-CSharp.csproj
@@ -81,6 +81,7 @@
     <Compile Include="Assets\Scripts\Items\KeyCardDrop.cs" />
     <Compile Include="Assets\Scripts\Items\KeycardLoot.cs" />
     <Compile Include="Assets\Scripts\LevelCompleteTriggers\LevelCompleteTrigger.cs" />
+    <Compile Include="Assets\Scripts\UI\LifeCount.cs" />
     <Compile Include="Assets\Scripts\UI\MapToggle\MapToggle.cs" />
     <Compile Include="Assets\Scripts\UI\MiniMap\MinimapCameraMovement.cs" />
     <None Include="Assets\Downloads\Military Vehicle\Humvee Info.txt" />
